v20.04/_sources/api/contrib.rst.txt
Contrib
================================================

.. toctree::
   :titlesonly:

.. contents::
   :local:


DL
--------------------


Callbacks
~~~~~~~~~~~~~~~~

.. automodule:: catalyst.contrib.dl.callbacks
    :members:
    :undoc-members:
    :show-inheritance:


NN
--------------------

Criterion
~~~~~~~~~~~~~~~~

.. automodule:: catalyst.contrib.nn.criterion.ce
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.criterion.contrastive
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.criterion.dice
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.criterion.focal
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.criterion.gan
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.criterion.huber
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.criterion.iou
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.criterion.lovasz
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.criterion.margin
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.criterion.triplet
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.criterion.wing
    :members:
    :undoc-members:
    :show-inheritance:


Modules
~~~~~~~~~~~~~~~~

.. automodule:: catalyst.contrib.nn.modules.common
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.modules.lama
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.modules.pooling
    :members:
    :undoc-members:
    :show-inheritance:


Optimizers
~~~~~~~~~~~~~~~~

.. automodule:: catalyst.contrib.nn.optimizers.lamb
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.optimizers.lookahead
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.optimizers.qhadamw
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.optimizers.radam
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.optimizers.ralamb
    :members:
    :undoc-members:
    :show-inheritance:


Schedulers
~~~~~~~~~~~~~~~~

.. automodule:: catalyst.contrib.nn.schedulers.base
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.nn.schedulers.onecycle
    :members:
    :undoc-members:
    :show-inheritance:


Models
--------------------

Segmentation
~~~~~~~~~~~~~~~~

.. automodule:: catalyst.contrib.models.cv.segmentation.unet
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.models.cv.segmentation.linknet
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.models.cv.segmentation.fpn
    :members:
    :undoc-members:
    :show-inheritance:

.. automodule:: catalyst.contrib.models.cv.segmentation.psp
    :members:
    :undoc-members:
    :show-inheritance:


Registry
--------------------

.. automodule:: catalyst.contrib.registry
    :members:
    :undoc-members:
    :show-inheritance:


Utilities
------------------------

Argparse
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.contrib.utils.argparse
    :members:
    :undoc-members:
    :show-inheritance:

Compression
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.contrib.utils.compression
    :members:
    :undoc-members:
    :show-inheritance:

Confusion Matrix
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.contrib.utils.confusion_matrix
    :members:
    :undoc-members:
    :show-inheritance:

Dataset
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.contrib.utils.dataset
    :members:
    :undoc-members:
    :show-inheritance:



Misc
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.contrib.utils.misc
    :members:
    :undoc-members:
    :show-inheritance:

Pandas
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.contrib.utils.pandas
    :members:
    :undoc-members:
    :show-inheritance:

Parallel
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.contrib.utils.parallel
    :members:
    :undoc-members:
    :show-inheritance:

Plotly
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.contrib.utils.plotly
    :members:
    :undoc-members:
    :show-inheritance:

Serialization
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.contrib.utils.serialization
    :members:
    :undoc-members:
    :show-inheritance:

Text
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.contrib.utils.text
    :members:
    :undoc-members:
    :show-inheritance:

Visualization
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.contrib.utils.visualization
    :members:
    :undoc-members:
    :show-inheritance:

Tools
------------------------

Tensorboard
~~~~~~~~~~~~~~~~~~~~~~
.. automodule:: catalyst.contrib.utils.tools.tensorboard
    :members:
    :undoc-members:
    :show-inheritance: